# telegram-media-downloader-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  Dockerfile  FILE_MANIFEST.txt  PROMPT_FOR_CODEX.md  README.md  config.example.yaml  docker-compose.yml  manage.ps1  manage.sh  pyproject.toml  renovate.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
data/cookies/: README.md
docs/: ACCEPTANCE_CRITERIA.md  ARCHITECTURE.md  CODEX_EXECUTION.md  CODE_MAP.md  CONFIGURATION.md  DECISIONS.md  HANDOFF_REPORT.md  LOCAL_BOT_API.md  OPERATIONS.md  PROJECT_SPEC.md  ROADMAP.md  SECURITY.md  STATUS.md  config.schema.json
docs/tasks/: T001-foundation.md  T002-configuration.md  T003-ytdlp-adapter.md  T004-default-job-flow.md  T005-inspection-format-ui.md  T006-progress-cancel-retries.md  T007-security-policy.md  T008-delivery-large-files.md  T009-persistence-recovery.md  T010-observability.md  T011-upgrade-canary.md  T012-plugin-sdk.md
plugins/example_extractor/: README.md  pyproject.toml
plugins/example_extractor/src/yt_dlp_plugins/extractor/: example_public_media.py
plugins/example_extractor/tests/: test_contract.py  test_plugin.py
scripts/: check_architecture.py  check_text_integrity.py  compare_canary.py  export_config_schema.py  generate_file_manifest.py  upgrade_ytdlp.py
src/telegram_media_bot/: __init__.py  __main__.py  cli.py
src/telegram_media_bot/application/ports/: delivery.py  download_engine.py  job_queue.py  job_repository.py  rate_limiter.py  url_validator.py
src/telegram_media_bot/application/services/: access_policy.py  download_service.py  error_policy.py  job_service.py  progress.py
src/telegram_media_bot/bootstrap/: config.py  logging.py
src/telegram_media_bot/domain/: errors.py  models.py
src/telegram_media_bot/infrastructure/observability/: __init__.py  health_server.py  metrics.py
src/telegram_media_bot/infrastructure/persistence/: __init__.py  sqlite_repository.py
src/telegram_media_bot/telegram/: bot_app.py  bot_factory.py  delivery.py  handlers.py  middleware.py  texts.py  ui.py  url_extractor.py
src/telegram_media_bot/workers/: jobs.py  settings.py
tests/: conftest.py
tests/contracts/: test_ytdlp_contract.py
tests/integration/: test_local_api_large_upload.py  test_local_api_runtime.py  test_sqlite_repository.py
tests/unit/: test_cli.py
tests/unit/application/: test_access_policy.py  test_download_service.py  test_error_policy.py  test_progress.py
tests/unit/architecture/: test_boundaries.py  test_container_definition.py  test_plugin_scaffold.py
tests/unit/bootstrap/: test_config.py  test_logging.py
tests/unit/domain/: test_models.py
tests/unit/telegram/: test_bot_factory.py  test_delivery.py  test_middleware.py  test_ui.py  test_url_extractor.py
tests/unit/workers/: test_jobs.py
(+22 files in other folders)
