[project]
name = "telegram-media-bot-example-extractor"
version = "0.1.0"
description = "Template for an external yt-dlp extractor plugin."
requires-python = ">=3.14"
dependencies = ["yt-dlp>=2026.7.4,<2027"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dlp_plugins"]

[dependency-groups]
dev = ["pytest>=9.0.3,<10"]

[tool.pytest.ini_options]
markers = ["contract: opt-in network contract test"]
